--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "debug": "ndb src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "test": "mocha --require test/setup.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
@@ -19,6 +20,7 @@
     "mocha": "^6.1.4",
     "ndb": "^1.0.45",
     "nodemon": "^1.19.1",
+    "postgrator-cli": "^3.1.0",
     "supertest": "^4.0.2"
   },
   "dependencies": {
@@ -26,7 +28,9 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
+    "knex": "^0.17.6",
     "morgan": "^1.9.1",
+    "pg": "^7.11.0",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
   }
